Fixed sources layout on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,8 +256,8 @@ hr.double {
     right: 0;
 }
 .inner {
-    padding-top: 90px;
-    padding-bottom: 90px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 h1,
 h2,
